Adding more comments

--- a/Template_matching_tutorial.ipynb
+++ b/Template_matching_tutorial.ipynb
@@ -91,7 +91,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is better to have chroma representations of notes and chords that take into account the presence of harmonics. We first create a note and then sum the notes created to form chords. The paramenter $\\alpha \\in \\left[0,1\\right]$ is resposible for the intensity of the harmonics, with $\\alpha=0$ we obtain notes and chords without harmonics."
+    "It is better to have chroma representations of notes and chords that take into account the presence of harmonics. We first create a note and then sum the notes created to form chords. The paramenter $\\alpha \\in \\left[0,1\\right]$ is resposible for the intensity of the harmonics, with $\\alpha=0$ we obtain notes and chords without harmonics.\n",
+    "\n",
+    "***\n",
+    "\n",
+    "**Example:** The note C, with harmonics, is represented by \\[ $1+\\alpha+\\alpha^3+\\alpha^7$, 0, 0, 0, $\\alpha^4$, 0, 0, $\\alpha^2+\\alpha^5$, 0, 0, $\\alpha^6$, 0 \\]"
    ]
   },
   {
@@ -170,6 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# We always work with normalized chorma vectors\n",
     "def normalize_2(chroma):\n",
     "    s=np.sum(chroma**2,axis=0)\n",
     "    for i in range(len(s)):\n",
@@ -189,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +203,7 @@
        "Text(0.5, 1.0, 'Chroma representation of selected chords, alpha = 0.5')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -230,7 +235,7 @@
     "### Load audio file\n",
     "In this section we load an example audio file, that has been prepared for this task. It contains a recording of major and minor chords played on the piano. This heavily simplifies the problem because:\n",
     "* only chords are played, there is no arpeggio\n",
-    "* onlyone instrument is present, so there are no differences in timbre\n",
+    "* only one instrument is present, so there are no differences in timbre\n",
     "* there is no melody, all notes played belong to the chord\n",
     "* there are only simple triads\n",
     "\n",
@@ -239,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -288,17 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# I compress the piece of music, leaving no space for dynamics\n",
-    "#music=librosa.mu_compress(music, quantize=False, mu=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +302,7 @@
        "Text(0.5, 1.0, 'Opened music file: Major_minor_triads_piano.wav')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -333,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,8 +377,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The tools we can use for preprocessing are temporal smoothing and logarithmic compression. Here we can see how they affect the chroma vectors."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,11 +402,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The function mu_compress is available only in recent versions of the package (for instance librosa 7.2, which is not the one available from conda!)\n",
+    "# The function mu_compress is available only in recent versions of the package\n",
+    "# (for instance librosa 7.2, which is not the one available from conda!)\n",
     "#chroma_compr = librosa.mu_compress(chroma_smooth, quantize=False, mu=30)\n",
     "chroma_compr = librosa.mu_compress(chroma, quantize=False, mu=10)\n",
     "\n",
@@ -413,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +425,7 @@
        "Text(0.5, 1.0, 'Compressed chroma representation of Major_minor_triads_piano.wav')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -464,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +491,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# A function to save the esteimated annotation in a suitable way that is compatible with Sonic Visualizer\n",
+    "# A function to save the estimated annotation in a suitable way that is compatible with Sonic Visualizer\n",
     "def write_lab_file(name,est_chords,sr,hop_length,chords_labs):\n",
     "    file = open(name+\".lab\",\"w\")\n",
     "    beg=0\n",
@@ -511,8 +514,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The number of different chords that have been estimated is something to look at. Between two estimators with similar error performances, I will choose the one that is more stable and that predicts a number of chords that is simalar to the correct one."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +567,7 @@
        "Text(0.5, 1.0, 'Similarity between chroma and template vs time')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -600,7 +610,7 @@
     "\n",
     "Preprocessing parametes, the right combination has to be found with some criteria:\n",
     "* $\\alpha$: parameter regulating the inclusion of harmonics in chord chroma templates\n",
-    "* **mu**:compression parameter\n",
+    "* **mu**: compression parameter\n",
     "* **n_win**: number of frames to include in temporal smoothing window\n",
     "\n",
     "Also some postprocessing teckniques can be applied to the estimated chords vector."
@@ -608,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,16 +677,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1445835eec8>"
+       "<matplotlib.legend.Legend at 0x1bb963c2f48>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -737,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -880,12 +890,12 @@
    "metadata": {},
    "source": [
     "## Postprocessing\n",
-    "We apply a KNN classifier to reclassify the frames, with only the time feature and the results of the template matching estimation as label. This procedure works as a smoother, in the sense that occasional errors are removed"
+    "We apply a KNN classifier to reclassify the frames, with only the time feature and the results of the template matching estimation as label. This procedure works as a smoother, in the sense that occasional errors are removed. We see that this procedure has a major impact on the number of different chords, leading to a more stable estimate."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +944,7 @@
        "        6,  6,  6,  6])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1209,7 @@
        "Text(0.5, 1.0, 'estimated chord label vs time frame')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1228,8 +1238,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the plot above classes of chords are represented with their numerical label."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1287,12 +1304,12 @@
    "metadata": {},
    "source": [
     "## Other example file\n",
-    "We try with a recording of arpeggios"
+    "We try with a recording of arpeggios to see what are the best parameters for time smoothing and postprocessing in this case"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1427,7 @@
        "Text(0.5, 1.0, 'estimated chord label vs time frame')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1439,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1450,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1490,11 +1507,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Good parameters are those that lead to a small misclassification error and to a number of estimated chords that is the same as the reference (or slightly above)"
+   ]
   }
  ],
  "metadata": {
